codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_credits_and_limits.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                                         │
│                                                                   │
│ 访问 https://chatgpt.com/codex/settings/usage 查看最新的          │
│ 限额与额度信息                                                    │
│                                                                   │
│  模型:           gpt-5.1-codex (推理 无, 摘要 自动)               │
│  目录:           [[workspace]]                                    │
│  权限:           自定义（只读，按需审批）                         │
│  Agents.md:      无                                               │
│                                                                   │
│  Token 使用量:   2K 总计  (1.4K 输入 + 600 输出)                  │
│  上下文窗口:     100% 剩余 (2.2K 已用 / 272K)                     │
│  5小时 限额:        [███████████░░░░░░░░░] 剩余 55% （重置 09:25） │
│  每周 限额:    [██████████████░░░░░░] 剩余 70% （重置 09:55）     │
│  额度:           38 额度                                          │
╰───────────────────────────────────────────────────────────────────╯
