codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_monthly_limit.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                                                  │
│                                                                            │
│ 访问 https://chatgpt.com/codex/settings/usage 查看最新的                   │
│ 限额与额度信息                                                             │
│                                                                            │
│  模型:           gpt-5.1-codex-max (推理 无, 摘要 自动)                    │
│  目录:           [[workspace]]                                             │
│  权限:           自定义（只读，按需审批）                                  │
│  Agents.md:      无                                                        │
│                                                                            │
│  Token 使用量:   1.2K 总计  (800 输入 + 400 输出)                          │
│  上下文窗口:     100% 剩余 (1.2K 已用 / 272K)                              │
│  每月 限额:   [██████████████████░░] 剩余 88% （重置 07:08 于 5月7日）     │
╰────────────────────────────────────────────────────────────────────────────╯
