codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_stale_limits_message.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                                             │
│                                                                       │
│ 访问 https://chatgpt.com/codex/settings/usage 查看最新的              │
│ 限额与额度信息                                                        │
│                                                                       │
│  模型:           gpt-5.1-codex-max (推理 无, 摘要 自动)               │
│  目录:           [[workspace]]                                        │
│  权限:           自定义（只读，按需审批）                             │
│  Agents.md:      无                                                   │
│                                                                       │
│  Token 使用量:   1.9K 总计  (1K 输入 + 900 输出)                      │
│  上下文窗口:     100% 剩余 (2.25K 已用 / 272K)                        │
│  5小时 限额:        [██████░░░░░░░░░░░░░░] 剩余 28% （重置 03:14）    │
│  每周 限额:    [████████████░░░░░░░░] 剩余 60% （重置 03:34）         │
│  警告:           限额数据可能过期，开始新回合以刷新。                 │
╰───────────────────────────────────────────────────────────────────────╯
